menu (2.1.18) unstable; urgency=low

  * The "unreleased" release 

 -- Bill Allombert <ballombe@debian.org>  Sat, 25 Sep 2004 15:06:51 +0200

menu (2.1.17) unstable; urgency=medium

  * The "yellow pig" release
  * urgency medium: i18n-only release.
  * Add Lithuanian menu section translation, by Kęstutis Biliūnas. 
    Closes: #266134
  * Add Croatian menu section translation by Krunoslav Gernhard.
    Closes: #268054
  * Add Hebrew menu section translation by Lior Kaplan.
    Closes: #269120

 -- Bill Allombert <ballombe@debian.org>  Fri,  3 Sep 2004 13:45:06 +0200

menu (2.1.16) unstable; urgency=low

  * The "Sarge is waiting for us!" release
  * Jens Arvidsson:
    - Update Swedish translation.
  * Morten Brix Pedersen:
    - Treat userprefix prefixed by // as an absolute path instead of just a
    relative path. Closes: #252637, #252891.
    - Revert change in 2.1.15: Don't let outputencoding default to LOCALE by
    default. This was causing too many problems. Closes: #258865.
  * Update Polish menu message translation, thanks Marcin Owsiany. 
  * Add Italian menu message translation, by Stefano Canepa.

 -- Bill Allombert <ballombe@debian.org>  Sat,  7 Aug 2004 11:25:22 +0200

menu (2.1.15) unstable; urgency=low

  * The "spring clean up" release 
  * Jens Arvidsson:
    - Update Swedish translation.
  * Update Italian menu-section translation. Thanks Stefano Canepa.
  * Fix German menu-section translation. Closes: #254416. 
    Thanks Eduard Bloch and Sebastian Rittau.
  * Update French translation of update-menus manpage. Closes: #256992.
    Thanks Sylvain Cherrier.
  * Fix po/Makefile.am so that tr.mo is installed. Sorry for not noticing
    sooner.
  * Morten Brix Pedersen:
    - Update Danish translation.
    - Fix wrong error message when install-menu couldn't open a menu-method.
    - outputencoding now defaults to LOCALE when no value is specified.
    - No longer require startmenu and endmenu to be defined.